# loopp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cpp-ci.yml
examples/: CMakeLists.txt
examples/echo-server/: CMakeLists.txt  README.md
examples/echo-server/src/: client.cpp  client.hpp  main.cpp  socket.cpp  socket.hpp  tcp_server.cpp  tcp_server.hpp
include/loopp/: event_loop.hpp
scripts/: code-quality.sh
src/: event_loop_epoll.cpp  event_loop_select.cpp
tests/: test_event_loop.cpp
